--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>diztudosobretudo</title>
 </head>
 <body>
-    Olá Mundo, o que querem saber?
+    <h1>Olá Mundo, o que querem saber?</h1>
+    <h2>Olá Mundo, o que querem saber?</h2>
 </body>
 </html>
