--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 <body>
     <h1>Olá Mundo, o que querem saber?</h1>
     <h2>Olá Mundo, o que querem saber?</h2>
-    <p>Sobre a Barbearia Alura
+    <div>
+        <p>Sobre a Barbearia Alura
 
-        Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
         <p>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
-
+    
             Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
             
             </p>
+    </div>
+ </div>
 </body>
 </html>
