--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>diztudosobretudo</title>
 </head>
 <body>
-    <img src="https://w.wallhaven.cc/full/4o/wallhaven-4orvr9.jpg" alt="banner-topo">
+    <img id="banner" src="https://w.wallhaven.cc/full/4o/wallhaven-4orvr9.jpg" alt="banner-topo">
     <h1>Olá Mundo, o que querem saber?</h1>
     <h2>Olá Mundo, o que querem saber?</h2>
     <div>
