--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img id="banner" src="https://w.wallhaven.cc/full/4o/wallhaven-4orvr9.jpg" alt="banner-topo">
+    <img id="banner" src="https://previews.123rf.com/images/olenayepifanova/olenayepifanova1712/olenayepifanova171200051/92124898-background-wallpaper-pattern-texture-backdrop-geek-nerd-gamer.jpg" alt="banner-topo">
     <h1>Olá Mundo, o que querem saber?</h1>
     <h2>Olá Mundo, o que querem saber?</h2>
     <div>
