--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <title>diztudosobretudo</title>
 </head>
-
 <body>
+
+    <header>
+     <ul>
+        <li>home</li>
+        <li>categorias</li>
+        <li>produtos</li>
+        <li>contatos</li>
+     </ul>
+    </header>
+
     <img id="banner" src="https://previews.123rf.com/images/olenayepifanova/olenayepifanova1712/olenayepifanova171200051/92124898-background-wallpaper-pattern-texture-backdrop-geek-nerd-gamer.jpg" alt="banner-topo">
     <h1>Olá Mundo, o que querem saber?</h1>
     <h2>Olá Mundo, o que querem saber?</h2>
