--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <header>
      <ul>
-        <li>home</li>
-        <li>categorias</li>
-        <li>produtos</li>
-        <li>contatos</li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="categorias.html">categorias</a></li>
+        <li><a href="produtos.html">produtos</a></li>
+        <li><a href="contatos.html">contatos</a></li>
      </ul>
     </header>
 
