--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
 
     <header>
-     <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="categorias.html">categorias</a></li>
-        <li><a href="produtos.html">produtos</a></li>
-        <li><a href="contatos.html">contatos</a></li>
-     </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="categorias.html">categorias</a></li>
+            <li><a href="produtos.html">produtos</a></li>
+            <li><a href="contatos.html">contatos</a></li>
+         </ul>
+    </nav>
     </header>
 
     <img id="banner" src="https://previews.123rf.com/images/olenayepifanova/olenayepifanova1712/olenayepifanova171200051/92124898-background-wallpaper-pattern-texture-backdrop-geek-nerd-gamer.jpg" alt="banner-topo">
